Added Recipe for Chai-Spiced Cakes to desserts section.

--- a/desserts.tex
+++ b/desserts.tex
@@ -277,4 +277,52 @@ Topping
 
 \end{enumerate}
 %%End recipe
+
+
+%%Start recipe
+\newrecipe{Chai-spiced cakes with Earl Grey tea syrup}{http://www.taste.com.au/recipes/22380/chai+spiced+cakes+with+earl+grey+tea+syrup}
+
+\bigskip
+\section*{Ingredients}
+
+\begin{ingredients-list}
+	\item 125g butter,softened.
+		\begin{textblock*}{8cm}(8.6cm,-0.8cm) % {block width} (coords)
+			\includegraphics[scale=0.35]{./img/chai-spiced_cakes.jpg}
+		\end{textblock*}
+	\item 1 cup (200g) brown sugar
+	\item 3 eggs
+	\item sfrac{1}{2} cup (75g) plain flour
+	\item sfrac{1}{4} cup (40g) self-raising flour
+	\item sfrac{1}{2} cup (45g) desiccated coconut
+	\item sfrac{1}{4} cup (60g) natural yoghurt
+	\item 1 teaspoon ground cinnamon
+	\item 1 teaspoon ground ginger
+	\item sfrac{1}{2} teaspoon ground fennel
+	\item sfrac{1}{2} teaspoon ground cardamom
+	\item sfrac{1}{2} teaspoon ground cloves
+	\item Pinch ground white pepper
+	\item 4 Earl Grey tea bags
+	\item 1 cinnamon stick
+	\item 2 cardamom pods, bruised
+	\item 1 cup (250ml) boiling water
+	\item sfrac{1}{2} cup (100g) caster sugar 
+\end{ingredients-list}
+
+\section*{Directions}
+\begin{enumerate}
+	\item Preheat oven to 160 \textcelsius . Grease twelve 1/2-cup (125ml) capacity loaf or friand pans.
+	\item Use an electric mixer to beat the butter and sugar in a medium bowl until pale and creamy.
+	\item Add the eggs, one at a time, beating well between each addition until just combined.
+	\item Add the flours, coconut, yoghurt, cinnamon, ginger, fennel, cardamom, cloves and pepper and stir to combine.
+	\item Spoon into the prepared pans and smooth the surface.
+	\item Bake in preheated oven for 20-25 minutes or until a skewer inserted in the centres comes out clean.
+		Remove from oven and turn onto a wire rack to cool completely.
+	\item Meanwhile, place the tea bags, cinnamon stick and cardamom pods in a medium saucepan and pour over the boiling water.
+		Set aside for 5 minutes to infuse. Remove and discard the tea bags. Add the sugar and place over low heat.
+		Cook, stirring, for 2 minutes or until sugar dissolves. Increase heat to high and bring to the boil.
+		Cook for 5 minutes or until syrup thickens slightly. Pour over the warm cakes to serve
+\end{enumerate}
+%%End recipe
+
 %%End Chapter
