--- a/mains.tex
+++ b/mains.tex
@@ -210,6 +210,54 @@ Wine companion: Full bodied red wine, Shiraz or Cabernet Sauvignon.
 	\item Cover the disk and place in the oven for around 45 minutes, or until all the liquid has been absorbed.
 	\item To finish, add the butter (if using) and fluff the pilaf with a fork. Sprinkle over the chopped parsley and mint and serve immediately.
 \end{enumerate}
+
+%%End recipe
+
+
+%%Start recipe
+\newrecipe{Laksa}{http://www.taste.com.au/recipes/6388/laksa}
+\section*{Ingredients}
+\bigskip
+\begin{ingredients-list}
+	\item 1 tablespoon peanut oil
+ 	\item 750ml (3 cups) Campbell's Real Stock Chicken
+		\begin{textblock*}{11cm}(9.0cm,0.1cm) % {block width} (coords)
+			\includegraphics[scale=0.34]{./img/laksa.jpg}
+		\end{textblock*}
+	\item 500ml (2 cups) coconut milk
+	\item 300g pkt dried rice noodles
+	\item 2 single chicken breasts, steamed, sliced
+	\item 1 pkt bean sprouts, straggly ends trimmed
+	\item 4 spring onions, diagonally sliced
+	\item 1/2 cup Vietnamese mint leaves
+	\item 1/2 cup coriander leaves
+	\item Fried eschallots, to serve*
+\end{ingredients-list}
+Laksa paste
+\begin{ingredients-list}
+	\item 4 large dried chillies, soaked in hot water
+	\item 3 eschallots, preferably Asian (red), peeled, chopped
+	\item 2 garlic cloves
+	\item 3cm piece fresh ginger
+	\item 2 small red chillies, seeded, chopped
+	\item 4 stems lemongrass (white part only), sliced
+	\item 8 macadamia nuts
+	\item 1 teaspoon shrimp paste
+	\item 2 teaspoons ground turmeric
+	\item 2 teaspoons ground coriander
+	\item 1 teaspoon palm or brown sugar
+	\item 3 tablespoons peanut oil
+\end{ingredients-list}
+
+\section*{Directions}
+\begin{enumerate}
+	\item  To make the laksa paste, drain the chillies and place in a food processor with the eschallots, garlic, ginger, red chillies, lemongrass, nuts, shrimp paste, turmeric, coriander, sugar and 			peanut oil.  Whiz in the processor until everything is finely chopped and forms a paste. This paste can be kept in a glass jar in the fridge until needed.
+	\item Heat the peanut oil in a wok over medium heat. Add the spice paste and stir-fry for about 5-6 minutes until fragrant.
+	\item Add the chicken stock and coconut milk, and stir to combine. Bring to the boil, then decrease heat to medium-low and simmer for 5 minutes, stirring occasionally.
+	\item Meanwhile, soak the dried rice noodles in a large bowl of boiling water for about 5 minutes until soft. Drain. Divide the noodles among serving bowls and place chicken on top.
+		Ladle over the hot soup.
+	\item Garnish with the bean sprouts, spring onions, Vietnamese mint leaves, coriander and fried eschallots.
+\end{enumerate}
  
 
 %%End recipe
