Fixed chai spiced cakes recipe with missing / before sfrac{}

--- a/desserts.tex
+++ b/desserts.tex
@@ -298,15 +298,15 @@ Topping
 	\item sfrac{1}{4} cup (60g) natural yoghurt
 	\item 1 teaspoon ground cinnamon
 	\item 1 teaspoon ground ginger
-	\item sfrac{1}{2} teaspoon ground fennel
-	\item sfrac{1}{2} teaspoon ground cardamom
-	\item sfrac{1}{2} teaspoon ground cloves
+	\item \sfrac{1}{2} teaspoon ground fennel
+	\item \sfrac{1}{2} teaspoon ground cardamom
+	\item \sfrac{1}{2} teaspoon ground cloves
 	\item Pinch ground white pepper
 	\item 4 Earl Grey tea bags
 	\item 1 cinnamon stick
 	\item 2 cardamom pods, bruised
 	\item 1 cup (250ml) boiling water
-	\item sfrac{1}{2} cup (100g) caster sugar 
+	\item \sfrac{1}{2} cup (100g) caster sugar 
 \end{ingredients-list}
 
 \section*{Directions}
