Fixed more \sfrac{} errors in desserts

--- a/desserts.tex
+++ b/desserts.tex
@@ -292,10 +292,10 @@ Topping
 		\end{textblock*}
 	\item 1 cup (200g) brown sugar
 	\item 3 eggs
-	\item sfrac{1}{2} cup (75g) plain flour
-	\item sfrac{1}{4} cup (40g) self-raising flour
-	\item sfrac{1}{2} cup (45g) desiccated coconut
-	\item sfrac{1}{4} cup (60g) natural yoghurt
+	\item \sfrac{1}{2} cup (75g) plain flour
+	\item \sfrac{1}{4} cup (40g) self-raising flour
+	\item \sfrac{1}{2} cup (45g) desiccated coconut
+	\item \sfrac{1}{4} cup (60g) natural yoghurt
 	\item 1 teaspoon ground cinnamon
 	\item 1 teaspoon ground ginger
 	\item \sfrac{1}{2} teaspoon ground fennel
