--- a/desserts.tex
+++ b/desserts.tex
@@ -278,6 +278,74 @@ Topping
 \end{enumerate}
 %%End recipe
 
+%%Start recipe
+\newrecipe{5 Minute Chocolate Cake}{}
+
+\bigskip
+\section*{Ingredients}
+
+\begin{ingredients-list}
+	\item 4 tablespoons self raising flour
+	\item 4 tablespoons caster sugar
+	\item 2 tablespoons cocoa
+	\item 1 egg
+	\item 3 tablespoons milk
+	\item 3 tablespoons oil
+	\item small splash of vanilla extract
+	\item 3 tablespoons choc chips (optional)
+\end{ingredients-list}
+
+\section*{Directions}
+\begin{enumerate}
+	\item Add dry ingredients to a bowl and mix well.
+	\item In a seperate bowl whisk the egg, oil, milk and vanilla extract.
+	\item Combine wet and dry ingredients.
+	\item Divide mixture between 2 or 3 1 cup ramekins.
+	\item Microwave on high (1000 watts) for 3 minutes.
+
+\end{enumerate}
+%%End recipe
+
+
+%%Start recipe
+\newrecipe{Devilishly Dark Chocolate Cake}{}
+
+\bigskip
+\section*{Ingredients}
+
+\begin{ingredients-list}
+	\item 250 grams unsalted butter
+	\item 200 grams of dark cooking chocolate milk
+	\item 1 tablespoon instant coffee powder
+	\item 1\sfrac{1}{2} cups hot water
+	\item 2 cups caster sugar (Reduce to 1\sfrac{1}{2} cups if desired)
+	\item 1\sfrac{1}{2} cups self raising flour
+	\item \sfrac{1}{4} cup cocoa
+	\item 2 eggs
+	\item 2 teaspoons of vanilla extract
+\end{ingredients-list}
+Chocolate Icing
+\begin{ingredients-list}
+	\item 125 grams  unsalted butter
+	\item 125 grams  dark ccooking chocolate, chopped.
+\end{ingredients-list}
+
+\section*{Directions}
+\begin{enumerate}
+	\item Melt butter on high in a large microwave safe bowl.
+	\item Add chocolate to the melted butter and stir until the chocolate is melted.  Microwave again briefly if necessary.
+	\item Add the sugar and stir until combined.
+	\item Dissolve the coffee powder in the hot water and then mix slowly into the chocolate/butter/sugar mixture.
+ 	\item Gradually beat in the sifted dry ingredients in about 3 lots.
+	\item Add eggs and vanilla extract and beat until just combined. Do not overbeat.
+	\item Pour into a greased and lined 23 cm round cake tin.
+	\item Bake for 1\sfrac{1}{2} hours at 150 \textcelsius (Fan Forced) or 160 \textcelsius conventional oven.
+	\item Stand for 5 minutes before turning out.  When cold top with chocolate icing.
+	\item To make the icing microwave the butter until melted and then stir in the chocolate until mixture is molten and smooth.
+	\item Beat with a wooden spoon until thick and spreadable, then ice the cake as desired.
+\end{enumerate}
+%%End recipe
+
 
 %%Start recipe
 \newrecipe{Chai-spiced cakes with Earl Grey tea syrup}{http://www.taste.com.au/recipes/22380/chai+spiced+cakes+with+earl+grey+tea+syrup}
